    based on metadata contained in file.

  * New possible bit in imgdata.process_warnings: LIBRAW_WARN_VENDOR_CROP_SUGGESTED
    If set: unknown/untested RAW image frame size passed to LibRaw, cropping may be incorrect.
    It is suggested to use LibRaw::adjust_to_raw_inset_crop(1) for vendor specified crop.

  * Better handling of DNG RAW Previews with Stage2 opcodes

  * Added imgdata.makernotes.sony.AspectRatio field
    - if parsed: contains aspect ratio (width to height)
    - if not parsed: initialized to -999.f

  * Nikon Z8/HLG mode: do not add 10 bit/unknown format thumbnails to the thumb_list

  * Canon CR2 16-bit bitmap previes: do not convert from Kodak colorspace

  * New compile-defined limit LIBRAW_MAX_PROFILE_SIZE_MB: 
       limits allocation/read size for embedded color profile (default: 256Mb)

  * Embedded color profile allocation/read size: limited by input file size.

  * Check against corrupted LJPEG header in Canon sRAW decoder
 
  * Better support for Sony metadata

  * Better handling of memory allocation errors in unpack_thumb()

  * Support for 8bit/Monochrome DNG Previews

  * LibRaw::thumbOK(): return 0 for YCbCr thumbnails (because
    unpack_thumb() will always return error: no correct thumbnails
    with this format found in the image samples yet)

  * Improved Sigma X3F files model recognition

  * Placeholder for DNG/YCC preview decoding: such previews are recorded
    by Samsung S21 Ultra smartfone, while all present samples contains
    broken data; Right now 'no preview' returned for such files.

  * Support for BW bitmap previews in LibRaw::dcraw_thumb_writer

  * Phase One: explicitly switch to monochrome mode if firmware string
    contains 'Achromatic' word

  * tiff parser: check for IFD offset before parsing it

2022-07-01  Alex Tutubalin <lexa@lexa.ru>

 LibRaw 0.21

 == Camera format support ==
 * Phase One/Leaf IIQ-S v2 support
 * Canon CR3 filmrolls
 * Canon CRM (movie) files